[package]
name = "rete"
version = "0.0.1"
authors = ["Mitchell Keith Bloch <bazald@gmail.com>"]
description = "rete implementation coming soon 👍"
readme = "README.md"
edition = "2018"
repository = "https://github.com/bazald/rete/"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
crossbeam = "0.8.0"
futures-channel-preview = "0.3.0-alpha.19"
js-sys = "0.3.45"
im = "15.0.0"
rayon = "1.5.0"
wasm-bindgen = { version = "0.2.68", features = ['serde-serialize'] }
wasm-bindgen-futures = "0.4.18"
xarc = "0.2.0"

[dev-dependencies]
rand = "0.7.3"
tokio = { version = "0.3.1", features = ["macros", "rt", "rt-multi-thread", "stream"] }
tokio-compat-02 = "0.1.1"
warp = { version = "0.2.5", features = ["tls"] }

[dependencies.web-sys]
version = "0.3.45"
features = [
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',
  'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]
