[package]
name = "rete"
version = "0.0.1"
authors = ["Mitchell Keith Bloch <bazald@gmail.com>"]
description = "rete implementation coming soon 👍"
readme = "README.md"
edition = "2018"
repository = "https://github.com/bazald/rete/"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["im-rs"]
full = ["im-rs"]
im-rs = ["im"]

[dependencies]
hashbrown = "0.11.2"
hash-trie = "0.1.0"
im = { version = "15.0.0", optional = true }

[dev-dependencies]
# crossbeam = "0.8.0"
rand = "0.8.3"
rayon = "1.5.0"
